--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "build": "gatsby build --prefix-paths",
         "develop": "npm run clean && gatsby develop",
         "format": "prettier --write \"{gatsby-*.js,src/**/*.js}\"",
-        "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+        "deploy": "./node_modules/.bin/gatsby build --prefix-paths && gh-pages -d public"
     },
     "repository": {
         "type": "git",
@@ -42,6 +42,7 @@
     },
     "dependencies": {
         "gatsby": "~2.22.12",
+        "gatsby-cli": "^2.12.37",
         "gatsby-plugin-favicon": "^3.1.6",
         "gatsby-plugin-google-analytics": "~2.0.6",
         "gatsby-plugin-postcss": "~2.0.0",
